A Standard compliant C preprocessor
Copyright (c) 2001-2003 Hartmut Kaiser
http://spirit.sourceforge.net/

See Copyright.txt for full copyright notices and acknowledgements.

-------------------------------------------------------------------------------

- Added proper macro argument expansion

Sun Feb  9 23:01:00  2003
- Improved error handling for #if et.al.
- Fixed a pair of lexer errors
- Implemented the #if/#elif statements, the sample now contains a complete C++ 
  expression evaluation engine (for the calculation of the outcome of the 
  #if/#elif statements)
- Implemented macro replacement (with parameters)
- Implemented the '##' [cpp.concat] operator
- Implemented the defined() [cpp.cond] operator

Sun Feb  2 23:28:24  2003
- Implemented the  #define, #undef, #ifdef, #ifndef, #else and #endif 
  statements
- Added optional parse tree output as xml stream (controlled through the config
  pp constant CPP_DUMP_PARSE_TREE)

Fri Jan 31 21:30:55  2003
- Fixed different minor issues and a border case (#include statement at the 
  last line of a included file)

Wed Jan 29 21:13:32  2003
- Fixed exception handling to report the correct error position
- Fixed another bug in the stream position calculation scheme
- Added a more elaborate sample 'list_includes' which lists the dependency
  information for a given source file (see test/list_includes/readme.txt).

Sat Jan 18 22:01:03  2003
- Fixed a bug in the stream position calculation scheme
- Made cpp::exceptions more standard conformant (added 'throw()' at appropriate 
  places)
- Overall housekeeping :-)

Wed Jan 15 21:54:20  2003
Changes since project start (still 0.5.0)
- Added #include <...> and #include "..." functionality
- pp directives are now generally recognized 
- Decoupled the C++ lexers and the pp grammar to separate compilation
  units (optionally) to speed up compilation (a lot!)

Thu Jan  2 12:39:30  2003
A completely new version 0.5.0 of the C preprocessor was startet. It's a 