@@ -15,8 +15,8 @@
 #if !defined(_CPP_VERSION_HPP__CE4FE67F_63F9_468D_8364_C855F89D3C5D__INCLUDED_)
 #define _CPP_VERSION_HPP__CE4FE67F_63F9_468D_8364_C855F89D3C5D__INCLUDED_
 
-#define VERSION_MAJOR           0
-#define VERSION_MINOR           5
-#define VERSION_SUBMINOR        0
+#define CPP_VERSION_MAJOR           0
+#define CPP_VERSION_MINOR           5
+#define CPP_VERSION_SUBMINOR        0
 
 #endif // !defined(_CPP_VERSION_HPP__CE4FE67F_63F9_468D_8364_C855F89D3C5D__INCLUDED_)
