@@ -6,7 +6,10 @@ See Copyright.txt for full copyright notices and acknowledgements.
 
 -------------------------------------------------------------------------------
 
-- Added proper macro argument expansion
+- Added a macro expansion engine which expands macros with arguments
+- Added a new sample: cpp_tokens. This sample preprocesses a given file and
+  prints out the string representations of all tokens returned from the pp 
+  iterator
 
 Sun Feb  9 23:01:00  2003
 - Improved error handling for #if et.al.
